--- a/mystyles.css
+++ b/mystyles.css
@@ -1,4 +1,3 @@
-.adsbygoogle,#google_ads_frame1,div[style="width:336px;height:280px;float:left;"],#the-promos
-{
-display:none;
+.adsbygoogle, #google_ads_frame1, div[style="width:336px;height:280px;float:left;"], #the-promos {
+    display: none;
 }
